--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>UK'S NXT | Junior Basketball UK</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #0c0c0c;
       color: #f0f0f0;
     }
@@ -18,7 +19,7 @@
       padding: 20px;
       text-align: center;
       font-size: 2em;
-      font-weight: bold;
+      font-weight: 800;
       letter-spacing: 2px;
     }
 
@@ -78,6 +79,13 @@
     a:hover {
       text-decoration: underline;
     }
+
+    .insta-bottom {
+      font-size: 1.1em;
+      margin-top: 40px;
+      font-weight: 600;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -98,17 +106,9 @@
       <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=xB7RDVRPxU6F9U5ICQo7I1TXsTAWl5hCqqTrt6g4o19UME1SOElPSThLSzBMRjlWNjMwWFpDTE5CQi4u"></iframe>
     </section>
 
-    <section>
-      <h2>Payment</h2>
-      <p>Make your payment below before submitting the form. This confirms your spot.</p>
-      <a class="btn" href="YOUR_PAYTRIPE_PAYMENT_LINK_HERE" target="_blank">Make Payment</a>
-    </section>
-
-    <section>
-      <h2>Follow Us</h2>
-      <p>We post all player spotlights and league updates on Instagram:</p>
-      <p>📸 <a href="https://instagram.com/uksnxt" target="_blank">@uksnxt</a></p>
-    </section>
+    <div class="insta-bottom">
+      📸 Follow us on Instagram: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi4nveB0PiNAxUhZkEAHbA8FM4QFnoECBgQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fuk_nxt%2F&usg=AOvVaw2bDIxr4Oky4ZNt97gmC1gR&cshid=1750169157260195&opi=89978449" target="_blank">@uksnxt</a>
+    </div>
   </main>
 
   <footer>
