--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>UK'S NXT | Junior Basketball UK</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet" />
+
+  <!-- Favicon (Replace with your actual image link) -->
+  <link rel="icon" type="image/png" href="https://i.imgur.com/YOUR_IMAGE.png" />
+
   <style>
     body {
       margin: 0;
@@ -79,13 +85,6 @@
     a:hover {
       text-decoration: underline;
     }
-
-    .insta-bottom {
-      font-size: 1.1em;
-      margin-top: 40px;
-      font-weight: 600;
-      text-align: center;
-    }
   </style>
 </head>
 <body>
@@ -106,13 +105,16 @@
       <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=xB7RDVRPxU6F9U5ICQo7I1TXsTAWl5hCqqTrt6g4o19UME1SOElPSThLSzBMRjlWNjMwWFpDTE5CQi4u"></iframe>
     </section>
 
-    <div class="insta-bottom">
-      📸 Follow us on Instagram: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi4nveB0PiNAxUhZkEAHbA8FM4QFnoECBgQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fuk_nxt%2F&usg=AOvVaw2bDIxr4Oky4ZNt97gmC1gR&cshid=1750169157260195&opi=89978449" target="_blank">@uksnxt</a>
-    </div>
+    <section>
+      <h2>Follow Us</h2>
+      <p>We post all player spotlights and league updates on Instagram:</p>
+      <p>📸 <a href="https://www.instagram.com/uk_nxt/" target="_blank">@uk_nxt</a></p>
+    </section>
   </main>
 
   <footer>
-    &copy; 2025 UK'S NXT — Junior Basketball UK. All rights reserved.
+    &copy; 2025 UK'S NXT — Junior Basketball UK. All rights reserved. <br />
+    Follow us on <a href="https://www.instagram.com/uk_nxt/" target="_blank">Instagram</a>
   </footer>
 </body>
 </html>
